--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <title>Sabrina Baggett Portal</title>
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   </head>
   <body>
+      <img id="bg" src="image/portal.png">
     <header>
       <h1>Sabrina Baggett</h1>
       <div id="mySketch">
