--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img id="bg" src="image/portal.png">
     <header>
       <h1>Sabrina Baggett</h1>
-      <div id="mySketch">
+      <div id="mySketch" onclick="randomize()">
 
       </div>
     </header>
