--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h3>Research</h3>
           <nav>
               <ul>
-                <li><a href="#">Comparative Analysis</a></li>
+                <li><a href="process/research/comparative.html">Comparative Analysis</a></li>
               </ul>
           </nav>
 
@@ -42,7 +42,7 @@
           <h3>Development</h3>
           <nav>
               <ul>
-                <li ><a href="#">Topic Brainstorm</a></li>
+                <li ><a href="process/research/topic-brainstorm.html">Topic Brainstorm</a></li>
               </ul>
           </nav>
 
