--- a/process/research/comparative.html
+++ b/process/research/comparative.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-      <img id="bg" src="image/portal.png">
+      <img id="bg" src="./image/portal.png">
       <header>
       <h1>Sabrina Baggett</h1>
     </header>
