--- a/process/research/topic-brainstorm.html
+++ b/process/research/topic-brainstorm.html
@@ -11,13 +11,13 @@
 
   </head>
   <body>
-      <img id="bg" src="image/portal.png" alt="backgroundImage">
+      <img id="bg" src="./image/portal.png" alt="backgroundImage">
     <header>
       <h1>Sabrina Baggett</h1>
     </header>
     <article>
         <h2><center><strong>Topic Brainstorm</strong></center></h2>
-        <img id="imgPic" src="image/tpicBrainstorm.jpg" alt="brainstorm">
+        <img id="imgPic" src="./image/tpicBrainstorm.jpg" alt="brainstorm">
 
     </article>
     <footer>
