--- a/studio1/index.html
+++ b/studio1/index.html
@@ -17,18 +17,20 @@
 
     </header>
 
-      <article id="madLibs"> 
-          <!--<section>
-                <section>
+     <article id="madLibs"> 
+       <!--   <section>
+                <section id="msg">
                     <h2>Generating Complete</h2>
-                </section>
-          </section>-->
-          Generate MadLibs Data...
-        <img src="images/computergif-01.png">
-           <form>
+                </section> 
+          </section> -->
+       Generate MadLibs Data...
+       <img src="images/computergif-01.png">
+      
+          <form>
+
             <fieldset>
               <label for="proNoun">Pronoun</label>
-              <input type="text" name="proNoun" id="proNoun" required>
+              <input type="text" name="proNoun" id="proNoun" required />
             </fieldset>
 
              <fieldset>
