--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3>Studios</h3>
           <nav>
             <ol>
-              <li><a href="studio1/index.html">Mad_Libs</a></li>
+              <li><a href="studio1/index.html">Mad_Libs 2.0</a></li>
             </ol>
           </nav>
 
