--- a/studio1/index.html
+++ b/studio1/index.html
@@ -71,7 +71,7 @@
         <div id="myProgress">
           <div id="myBar"></div>
         </div>
-              
+           <input type="button" value= "Return to Home" >   
           </form>
       </article>
     <footer>
