--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <nav>
               <ul>
                 <li><a href="process/research/comparative.html">Comparative Analysis</a></li>
+                <li><a href="process/research/comparative.html">Background Research</a></li>
+
               </ul>
           </nav>
 
