--- a/studio2/index.html
+++ b/studio2/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sabrina Baggett Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pocket Full of Items</title>
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" >
@@ -10,9 +11,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   </head>
+  
   <body>
+      <div class="items" id="item1">
+        <img src="images/studio2_items-02.png">
+      </div>
+      <div class="items" id="item2">
+        <img src="images/studio2_items-03.png">
+      </div>
+      <div class="items" id="item3">
+        <img src="images/studio2_items-04.png">
+      </div>
       <img id="bg" src="images/studio2_background.png">
-
+      <map id="imagemap1" name="imagemap1">
+        <area shape="rect" alt="Ohren" coords="560,68,756,144" href="#" />
+      </map>
+      
+      <img id="backpack" src="images/studio2_items-01.png">
 
     <footer>
         <a href="mailto:sabaggett@ucdavis.edu">Email</a>
