--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <nav>
             <ol>
               <li><a href="studio1/index.html">Mad_Libs 2.0</a></li>
+              <li><a href="studio2/index.html">Pocket Full of Interface</a></li>
             </ol>
           </nav>
 
