--- a/studio2/index.html
+++ b/studio2/index.html
@@ -13,6 +13,9 @@
   </head>
   
   <body>
+      <img id="bg" src="images/studio2_background.png">
+      <img id="bg" src="images/studio2_background_mobile.png">
+
       <div class="items" id="item1">
         <img src="images/studio2_items-02.png">
       </div>
@@ -22,12 +25,16 @@
       <div class="items" id="item3">
         <img src="images/studio2_items-04.png">
       </div>
-      <img id="bg" src="images/studio2_background.png">
       <map id="imagemap1" name="imagemap1">
         <area shape="rect" alt="Ohren" coords="560,68,756,144" href="#" />
       </map>
-      
+      <div class="modelButton" id="m1"></div>
+      <div class="modelButton" id="m2"></div>
+      <div class="modelButton" id="m3"></div>
+
       <img id="backpack" src="images/studio2_items-01.png">
+      
+      <div id="shadow"></div>
 
     <footer>
         <a href="mailto:sabaggett@ucdavis.edu">Email</a>
