--- a/studio2/index.html
+++ b/studio2/index.html
@@ -13,8 +13,8 @@
   </head>
   
   <body>
-      <img id="bg" src="images/studio2_background.png">
-      <img id="bg" src="images/studio2_background_mobile.png">
+      <img id="bg1" src="images/studio2_background.png">
+      <img id="bg2" src="images/studio2_background_mobile.png">
 
       <div class="items" id="item1">
         <img src="images/studio2_items-02.png">
