--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <ol>
               <li><a href="studio1/index.html">Mad_Libs 2.0</a></li>
               <li><a href="studio2/index.html">Pocket Full v2</a></li>
+              <li><a href="studio3/index.html">Game On!</a></li>
             </ol>
           </nav>
 
