--- a/studio3/index.html
+++ b/studio3/index.html
@@ -14,10 +14,12 @@
         <h1>Catch Paul the Pixel!</h1>
 
         <div id="pixel"></div>
+        
     </section> 
 
     <span id="score">Score: 0</span>
     <span id="timeLeft">Time Remaining: 0</span>
+    <span id="lifes">Life: 0</span>
     <br>
     <button id="stop">reset</button>
     <button id ="fullScreen">fullscreen</button>
