--- a/studio4/index.html
+++ b/studio4/index.html
@@ -7,16 +7,59 @@
       <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" >
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script type="text/javascript" src="https://tonejs.github.io/build/r6/p5.Tone.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   </head>
   <body>
+      
+
+      
       <img id="bg1" src="image/Background_mobile.png"
     alt="Background Image">
       <img id="bg2" src="image/Background_desktop.png"
     alt="Background Image">
+        <ul class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/work/">Work</a></li>
+          <li><a href="/clients/">Clients</a></li>
+          <li><a href="/contact/">Contact</a></li>
+        </ul>
+            <section>
+              <section id="artBoard">
+                  Pick a Note from CMajor:
+                  <div class="notes">
+                      <div class="note" id="noteC4" >
+                          C4
+                      </div>
+                      <div class="note" id="noteD4">
+                          D4
+                      </div>
+                      <div class="note" id="noteF4">
+                          F4
+                      </div>
+                      <div class="note" id="noteG4">
+                          G4
+                      </div>
+                      <div class="note" id="noteA4">
+                          A4
+                      </div>
+                      <div class="note" id="noteB4">
+                          B4
+                      </div>
+                      <div class="note" id="noteC5">
+                          C5
+                      </div>
+                </div>
+                  <div id="progress">Next</div>
+             </section>
+
+        </section>
+      <article>
+      Create
+      </article>
     <footer>
         <a href="mailto:sabaggett@ucdavis.edu">Email</a>
         &#8270;
