--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <li><a href="studio1/index.html">Mad_Libs 2.0</a></li>
               <li><a href="studio2/index.html">Pocket Full v2</a></li>
               <li><a href="studio3/index.html">Game On!</a></li>
+              <li><a href="studio4/index.html">Meet Me at the Library</a></li>
             </ol>
           </nav>
 
