--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <nav>
               <ul>
                 <li ><a href="process/research/topic-brainstorm.html">Topic Brainstorm</a></li>
+                <li ><a href="process/research/storyboard.html">Story Board</a></li>
+                <li ><a href="process/research/siteflow.html">Site Flow</a></li>
+                <li ><a href="process/research/wireframe.html">Wireframe</a></li>
               </ul>
           </nav>
 
