--- a/final/index.html
+++ b/final/index.html
@@ -27,6 +27,14 @@
 <article class="page hidden" id="page3">Section Header 3</article>
 <article class="page hidden" id="page4">Section Header 4</article>
 <article class="page hidden" id="page5">Section Header 5</article>
+      
+ <footer>
+        <a href="mailto:sabaggett@ucdavis.edu">Email</a>
+        &#8270;
+        <a href="https://validator.w3.org/check?uri=referer">Valid HTML</a>
+        &#8270;
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a><br>
+    </footer>
     <script src="script.js"></script>
   </body>
 
