--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="process/research/research.html">Background Research</a></li>
                 <li><a href="process/research/audience.html">Audience Research</a></li>
                 <li><a href="process/research/visual.html">Visual Research</a></li>
+                <li><a href="process/research/proposal-draft.html">C&amp;C 2019 Proposal></li>
               </ul>
           </nav>
 
