--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
                 <li><a href="process/research/research.html">Background Research</a></li>
                 <li><a href="process/research/audience.html">Audience Research</a></li>
                 <li><a href="process/research/visual.html">Visual Research</a></li>
-                <li><a href="process/research/proposal-draft.html">C&amp;C 2019 Proposal</li>
+                <li><a href="process/research/proposal-draft.html">C&amp;C 2019 Proposal</a></li>
               </ul>
           </nav>
-
       </section>
       <section>
           <h3>Development</h3>
@@ -55,7 +54,6 @@
                 <li ><a href="process/research/wireframe.html">Wireframe</a></li>
               </ul>
           </nav>
-
       </section>
     </section>
     <footer>
