--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li ><a href="process/research/storyboard.html">Story Board</a></li>
                 <li ><a href="process/research/siteflow.html">Site Flow</a></li>
                 <li ><a href="process/research/wireframe.html">Wireframe</a></li>
+                <li ><a href="process/research/comps.html">Comps</a></li> 
               </ul>
           </nav>
       </section>
