--- a/process/research/comps.html
+++ b/process/research/comps.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Site Flow</title>
+    <title>Comps</title>
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="styles.css" >
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
@@ -15,10 +15,10 @@
 
     <article>
         <h2><center><strong>Comp 1</strong></center></h2>
-        <img src="./image/comps-01.png" alt="comp1">
+        <img id="imgPic" src="./image/comps-01.png" alt="comp1">
 
         <h2><center><strong>Comp 2</strong></center></h2>
-        <img src="./image/comps-02.png" alt="comp2">
+        <img id="imgPic" src="./image/comps-02.png" alt="comp2">
     </article>
     <footer>
         <a href="mailto:sabaggett@ucdavis.edu">Email</a>
