--- a/final/index.html
+++ b/final/index.html
@@ -15,18 +15,39 @@
     <nav>
   <ul>
     <!--     links start with a hash mark because they are local to this page and link to the element with the same id -->
-    <li id="p1">one</li>
-    <li id="p2">two</li>
-    <li id="p3">three</li>
-    <li id="p4">four</li>
-    <li id="p5">five</li>
+    <li id="p1">Home</li>
+    <li id="p2">Gallery</li>
+    <li id="p3">Learn</li>
+    <li id="p4">Create</li>
+    <li id="p5">About Us</li>
   </ul>
 </nav>
-<article class="page" id="page1">Section Header 1</article>
-<article class="page hidden" id="page2">Section Header 2</article>
-<article class="page hidden" id="page3">Section Header 3</article>
-<article class="page hidden" id="page4">Section Header 4</article>
-<article class="page hidden" id="page5">Section Header 5</article>
+<article class="page" id ="page1"></article>
+    <img id="header" alt="background" src="image/header.png">     
+       <div id="text">Explore</div>
+      
+<article class="page hidden" id="page2"><h2>Gallery</h2></article>
+<article class="page hidden" id="page3"><h2>Learn</h2></article>
+<article class="page hidden" id="page4"><h2>Create</h2></article>
+<article class="page hidden" id="page5"><h2>About Us</h2></article>
+<article class="page hidden" id="page5">
+    <section style="background-color:#B658A2;">Gallery<br /><br />
+    Look at others work.<br />  
+    See how others chose to innovate. <br /><br />
+    </section>
+    <section>Learn<br /><br />
+    Learn the different aspects of artistic creation.<br />  
+    The first step is to expand your learning horizons. <br /><br />
+    </section>
+    <section>Create<br /><br />
+    Participate in the Show.<br />  
+    Find the different sections of artistic creation. <br /><br />   
+    </section>
+    <section>About Us<br /><br />
+    Who created this site? And Why?<br />  
+    Lets find out! <br /><br />   
+    </section>
+</article>
       
  <footer>
         <a href="mailto:sabaggett@ucdavis.edu">Email</a>
