--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li><a href="studio2/index.html">Pocket Full v2</a></li>
               <li><a href="studio3/index.html">Game On!</a></li>
               <li><a href="studio4/index.html">Meet Me at the Library</a></li>
+            <li><a href="final/index.html">Final</a></li>
             </ol>
           </nav>
 
