--- a/final/index.html
+++ b/final/index.html
@@ -25,19 +25,35 @@
 <article class="page" id ="page1"></article>
     <img id="header" alt="background" src="image/header.png">     
        <div id="text">Explore</div>
-      
-<article class="page hidden" id="page2"><h2>Gallery</h2></article>
-<article class="page hidden" id="page3"><h2>Learn</h2></article>
-<article class="page hidden" id="page4"><h2>Create</h2></article>
-<article class="page hidden" id="page5"><h2>About Us</h2></article>
+
+<article class="page hidden" id="page2">
+    <p>Look at others work.<br />  
+        See how others chose to innovate. </p>
+    <h2>Gallery</h2>
+</article>
+<article class="page hidden" id="page3">
+    <p>Learn aspects of artistic creation.<br /> 
+    Expand your learning horizons. </p>
+    <h2>Learn</h2>
+</article>
+<article class="page hidden" id="page4">
+    <p>Participate in the Show. 
+    Find the different sections of artistic creation.</p>
+    <h2>Create</h2>
+</article>
+<article class="page hidden" id="page5">
+    <p>Who created this site? And Why?<br />  
+    Lets find out!</p>
+    <h2>About Us</h2>
+</article>
 <article class="page hidden" id="page5">
     <section style="background-color:#B658A2;">Gallery<br /><br />
     Look at others work.<br />  
     See how others chose to innovate. <br /><br />
     </section>
     <section>Learn<br /><br />
-    Learn the different aspects of artistic creation.<br />  
-    The first step is to expand your learning horizons. <br /><br />
+    Learn aspects of artistic creation.<br />  
+    Expand your learning horizons. <br /><br />
     </section>
     <section>Create<br /><br />
     Participate in the Show.<br />  
