--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li><a href="studio2/index.html">Pocket Full v2</a></li>
               <li><a href="studio3/index.html">Game On!</a></li>
               <li><a href="studio4/index.html">Meet Me at the Library</a></li>
-            <li><a href="final/index.html">Interactive Wireframe</a></li>
+            <li><a href="final/index.html">Final</a></li>
             </ol>
           </nav>
 
@@ -42,8 +42,7 @@
                 <li><a href="process/research/audience.html">Audience Research</a></li>
                 <li><a href="process/research/visual.html">Visual Research</a></li>
                 <li><a href="process/research/proposal-draft.html">C&amp;C 2019 Proposal</a>
-                <li><a href="final/index.html">Interactive Wireframe</a></li>
-                <li><a href="final/index.html">proto1</a></li>
+                
 
                 </li>
               </ul>
@@ -58,6 +57,8 @@
                 <li ><a href="process/research/siteflow.html">Site Flow</a></li>
                 <li ><a href="process/research/wireframe.html">Wireframe</a></li>
                 <li ><a href="process/research/comps.html">Comps</a></li> 
+                <li><a href="final/index.html">Interactive Wireframe</a></li>
+                <li><a href="final/index.html">proto1</a></li>
               </ul>
           </nav>
       </section>
