--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li><a href="process/research/audience.html">Audience Research</a></li>
                 <li><a href="process/research/visual.html">Visual Research</a></li>
                 <li><a href="process/research/proposal-draft.html">C&amp;C 2019 Proposal</a>
+                <li><a href="process/research/image/presentation.pdf">presentation</a>    
                 
 
                 </li>
@@ -59,6 +60,7 @@
                 <li ><a href="process/research/comps.html">Comps</a></li> 
                 <li><a href="final/index.html">Interactive Wireframe</a></li>
                 <li><a href="final/index.html">proto1</a></li>
+                <li><a href="final/index.html">proto2</a></li>
               </ul>
           </nav>
       </section>
