pretty much done

--- a/final/index.html
+++ b/final/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MadLib</title>
+    <title>CreateTistic Inc</title>
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" >
@@ -37,9 +37,10 @@
     <h2>Learn</h2>
 </article>
 <article class="page hidden" id="page4">
-    <p>Participate in the Show. 
-    Find the different sections of artistic creation.</p>
-    <h2>Create</h2>
+    <h2 id="music">Music</h2>
+    <h2 id="drama">Drama</h2>
+    <article class="page hidden" id="page4small">
+    </article>
 </article>
 <article class="page hidden" id="page5">
     <p>Who created this site? And Why?<br />  
