--- a/final/create/drama/index.html
+++ b/final/create/drama/index.html
@@ -30,7 +30,7 @@
           <h1>Welcome!<br /></h1>
           <p>Become a playwright</p>  
       
-            <form name= "form1">
+            <form id = "formId">
 
             <fieldset>
               <label for="Teaser">Teaser</label>
