Final- still working on Firebase!

--- a/final/create/drama/index.html
+++ b/final/create/drama/index.html
@@ -34,7 +34,7 @@
 
             <fieldset>
               <label for="Teaser">Teaser</label>
-                <br />
+                <br /><br />
               <input type="text" name="teaser" id="teaser" required />
             </fieldset>
 
@@ -67,9 +67,10 @@
   
           </form>
       </article>
-      
+      <section id="scriptSection">
+      </section>
       <div id="backButton">Back Home</div>
-      <div id="add">Next</div>
+      <div id="add">Produce</div>
       <div id="finish">Save</div>
       <div id="delete">Start Over</div>
     <footer>
