small additions still not done

--- a/final/index.html
+++ b/final/index.html
@@ -32,9 +32,12 @@
     <h2>Gallery</h2>
 </article>
 <article class="page hidden" id="page3">
-    <p>Learn aspects of artistic creation.<br /> 
-    Expand your learning horizons. </p>
-    <h2>Learn</h2>
+      <h2>Begin<br/>
+        Your<br/>
+        Journey<br/>
+    </h2>
+  
+    
 </article>
 <article class="page hidden" id="page4">
     <h2 id="music">Music</h2>
