--- a/final/learn/index.html
+++ b/final/learn/index.html
@@ -22,7 +22,7 @@
 
       <article>
           <h1>Welcome!<br /></h1>
-          <p>Become a playwright</p>  
+          <p>Learn More Here</p>  
       
  
       </article>
